manifests/authentik/post-install/overlays/lab/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
  - name: front-door
    sectionName: https
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - authentik.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authentik-server
      port: 80
      weight: 1
      kind: Service
